# sys-dashboard-appwrite

./: .gitignore
gpu-dash-cpp/: CMakeLists.txt  main.cpp
gpu-dash-tdh/: package.json  pnpm-lock.yaml
gpu-dash-tdh/src/: App.tsx  index.css  main.tsx
gpu-dash-tdh/src/components/: cpu-dash.tsx  disk-dash.tsx  gpu-dash.tsx  ssh.tsx  sys-info.tsx  terminal.tsx
gpu-dash-tdh/src/components/ui/: chart.tsx  interactive-area-chart.tsx  line-chart.tsx  radial-chart-text.tsx  select.tsx  transition-panel.tsx
gpu-dash-tdh/src/lib/: db.ts
gpu-dash-tdh/src/types/: core.ts
rust-back/: Cargo.toml
rust-back/src/: main.rs  ssh.rs  terminal.rs
