[package]
name = "gpu-dash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
actix-rt = "2.0.0"
actix-cors = "0.6"
actix-utils = "2.0.0"
windows-sys = "0.36.0"
winapi = "0.3.9"
env_logger = "0.11.5"
sysinfo = "0.31.4"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
bytes = "1.7.1"
actix-web-actors = "4.3.1"
